fichiers cours 2122/TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> code
Rule 2     code -> function code
Rule 3     code -> function
Rule 4     param -> VAR DELIMPARAM param
Rule 5     param -> VAR
Rule 6     callparam -> expression DELIMPARAM callparam
Rule 7     callparam -> expression
Rule 8     value -> expression
Rule 9     value -> VAR
Rule 10    listvalue -> value
Rule 11    listvalue -> value DELIMPARAM listvalue
Rule 12    array -> LBRACKET listvalue RBRACKET
Rule 13    array -> LBRACKET RBRACKET
Rule 14    function -> FUN VAR LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
Rule 15    function -> FUN VAR LPAREN RPAREN OPENBRACE bloc CLOSEBRACE
Rule 16    function -> PROC VAR LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
Rule 17    function -> PROC VAR LPAREN RPAREN OPENBRACE bloc CLOSEBRACE
Rule 18    bloc -> statement bloc
Rule 19    bloc -> statement
Rule 20    statement -> expression DELIM
Rule 21    statement -> assign DELIM
Rule 22    statement -> STOP DELIM
Rule 23    statement -> ifstatement
Rule 24    ifstatement -> IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE
Rule 25    ifstatement -> IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE ELSE OPENBRACE bloc CLOSEBRACE
Rule 26    ifstatement -> IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE ELSE ifstatement
Rule 27    statement -> WHILE LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE
Rule 28    statement -> FOR LPAREN assign DELIM expression DELIM bloc RPAREN OPENBRACE bloc CLOSEBRACE
Rule 29    expression -> PRINT LPAREN expression RPAREN
Rule 30    expression -> expression AND expression
Rule 31    expression -> expression OR expression
Rule 32    expression -> expression COMPARE expression
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression TIMES expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> VAR INC
Rule 38    expression -> VAR DEC
Rule 39    expression -> VAR ASSPLUS expression
Rule 40    expression -> VAR ASSMINUS expression
Rule 41    expression -> VAR ASSTIMES expression
Rule 42    expression -> VAR ASSDIV expression
Rule 43    expression -> LPAREN expression RPAREN
Rule 44    expression -> NUMBER
Rule 45    expression -> OPENQUOTE ANY CLOSEQUOTE
Rule 46    expression -> VAR
Rule 47    expression -> VAR LPAREN callparam RPAREN
Rule 48    expression -> VAR LPAREN RPAREN
Rule 49    assign -> VAR AFFECT expression
Rule 50    assign -> VAR AFFECT array
Rule 51    assign -> VAR LBRACKET expression RBRACKET AFFECT expression

Terminals, with rules where they appear

AFFECT               : 49 50 51
AND                  : 30
ANY                  : 45
ASSDIV               : 42
ASSMINUS             : 40
ASSPLUS              : 39
ASSTIMES             : 41
CLOSEBRACE           : 14 15 16 17 24 25 25 26 27 28
CLOSEQUOTE           : 45
COMPARE              : 32
DEC                  : 38
DELIM                : 20 21 22 28 28
DELIMPARAM           : 4 6 11
DIVIDE               : 36
ELSE                 : 25 26
FOR                  : 28
FUN                  : 14 15
IF                   : 24 25 26
INC                  : 37
LBRACKET             : 12 13 51
LPAREN               : 14 15 16 17 24 25 26 27 28 29 43 47 48
MINUS                : 34
NUMBER               : 44
OPENBRACE            : 14 15 16 17 24 25 25 26 27 28
OPENQUOTE            : 45
OR                   : 31
PLUS                 : 33
PRINT                : 29
PROC                 : 16 17
RBRACKET             : 12 13 51
RPAREN               : 14 15 16 17 24 25 26 27 28 29 43 47 48
STOP                 : 22
TIMES                : 35
VAR                  : 4 5 9 14 15 16 17 37 38 39 40 41 42 46 47 48 49 50 51
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

array                : 50
assign               : 21 28
bloc                 : 14 15 16 17 18 24 25 25 26 27 28 28
callparam            : 6 47
code                 : 1 2
expression           : 6 7 8 20 24 25 26 27 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 39 40 41 42 43 49 51 51
function             : 2 3
ifstatement          : 23 26
listvalue            : 11 12
param                : 4 14 16
start                : 0
statement            : 18 19
value                : 10 11

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . code
    (2) code -> . function code
    (3) code -> . function
    (14) function -> . FUN VAR LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
    (15) function -> . FUN VAR LPAREN RPAREN OPENBRACE bloc CLOSEBRACE
    (16) function -> . PROC VAR LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
    (17) function -> . PROC VAR LPAREN RPAREN OPENBRACE bloc CLOSEBRACE

    FUN             shift and go to state 4
    PROC            shift and go to state 5

    start                          shift and go to state 1
    code                           shift and go to state 2
    function                       shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> code .

    $end            reduce using rule 1 (start -> code .)


state 3

    (2) code -> function . code
    (3) code -> function .
    (2) code -> . function code
    (3) code -> . function
    (14) function -> . FUN VAR LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
    (15) function -> . FUN VAR LPAREN RPAREN OPENBRACE bloc CLOSEBRACE
    (16) function -> . PROC VAR LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
    (17) function -> . PROC VAR LPAREN RPAREN OPENBRACE bloc CLOSEBRACE

    $end            reduce using rule 3 (code -> function .)
    FUN             shift and go to state 4
    PROC            shift and go to state 5

    function                       shift and go to state 3
    code                           shift and go to state 6

state 4

    (14) function -> FUN . VAR LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
    (15) function -> FUN . VAR LPAREN RPAREN OPENBRACE bloc CLOSEBRACE

    VAR             shift and go to state 7


state 5

    (16) function -> PROC . VAR LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
    (17) function -> PROC . VAR LPAREN RPAREN OPENBRACE bloc CLOSEBRACE

    VAR             shift and go to state 8


state 6

    (2) code -> function code .

    $end            reduce using rule 2 (code -> function code .)


state 7

    (14) function -> FUN VAR . LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
    (15) function -> FUN VAR . LPAREN RPAREN OPENBRACE bloc CLOSEBRACE

    LPAREN          shift and go to state 9


state 8

    (16) function -> PROC VAR . LPAREN param RPAREN OPENBRACE bloc CLOSEBRACE
    (17) function -> PROC VAR . LPAREN RPAREN OPENBRACE bloc CLOSEBRACE

    LPAREN          shift and go to state 10


state 9

    (14) function -> FUN VAR LPAREN . param RPAREN OPENBRACE bloc CLOSEBRACE
    (15) function -> FUN VAR LPAREN . RPAREN OPENBRACE bloc CLOSEBRACE
    (4) param -> . VAR DELIMPARAM param
    (5) param -> . VAR

    RPAREN          shift and go to state 13
    VAR             shift and go to state 11

    param                          shift and go to state 12

state 10

    (16) function -> PROC VAR LPAREN . param RPAREN OPENBRACE bloc CLOSEBRACE
    (17) function -> PROC VAR LPAREN . RPAREN OPENBRACE bloc CLOSEBRACE
    (4) param -> . VAR DELIMPARAM param
    (5) param -> . VAR

    RPAREN          shift and go to state 15
    VAR             shift and go to state 11

    param                          shift and go to state 14

state 11

    (4) param -> VAR . DELIMPARAM param
    (5) param -> VAR .

    DELIMPARAM      shift and go to state 16
    RPAREN          reduce using rule 5 (param -> VAR .)


state 12

    (14) function -> FUN VAR LPAREN param . RPAREN OPENBRACE bloc CLOSEBRACE

    RPAREN          shift and go to state 17


state 13

    (15) function -> FUN VAR LPAREN RPAREN . OPENBRACE bloc CLOSEBRACE

    OPENBRACE       shift and go to state 18


state 14

    (16) function -> PROC VAR LPAREN param . RPAREN OPENBRACE bloc CLOSEBRACE

    RPAREN          shift and go to state 19


state 15

    (17) function -> PROC VAR LPAREN RPAREN . OPENBRACE bloc CLOSEBRACE

    OPENBRACE       shift and go to state 20


state 16

    (4) param -> VAR DELIMPARAM . param
    (4) param -> . VAR DELIMPARAM param
    (5) param -> . VAR

    VAR             shift and go to state 11

    param                          shift and go to state 21

state 17

    (14) function -> FUN VAR LPAREN param RPAREN . OPENBRACE bloc CLOSEBRACE

    OPENBRACE       shift and go to state 22


state 18

    (15) function -> FUN VAR LPAREN RPAREN OPENBRACE . bloc CLOSEBRACE
    (18) bloc -> . statement bloc
    (19) bloc -> . statement
    (20) statement -> . expression DELIM
    (21) statement -> . assign DELIM
    (22) statement -> . STOP DELIM
    (23) statement -> . ifstatement
    (27) statement -> . WHILE LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE
    (28) statement -> . FOR LPAREN assign DELIM expression DELIM bloc RPAREN OPENBRACE bloc CLOSEBRACE
    (29) expression -> . PRINT LPAREN expression RPAREN
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression COMPARE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . VAR INC
    (38) expression -> . VAR DEC
    (39) expression -> . VAR ASSPLUS expression
    (40) expression -> . VAR ASSMINUS expression
    (41) expression -> . VAR ASSTIMES expression
    (42) expression -> . VAR ASSDIV expression
    (43) expression -> . LPAREN expression RPAREN
    (44) expression -> . NUMBER
    (45) expression -> . OPENQUOTE ANY CLOSEQUOTE
    (46) expression -> . VAR
    (47) expression -> . VAR LPAREN callparam RPAREN
    (48) expression -> . VAR LPAREN RPAREN
    (49) assign -> . VAR AFFECT expression
    (50) assign -> . VAR AFFECT array
    (51) assign -> . VAR LBRACKET expression RBRACKET AFFECT expression
    (24) ifstatement -> . IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE
    (25) ifstatement -> . IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE ELSE OPENBRACE bloc CLOSEBRACE
    (26) ifstatement -> . IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE ELSE ifstatement

    STOP            shift and go to state 29
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    PRINT           shift and go to state 33
    VAR             shift and go to state 23
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 34
    OPENQUOTE       shift and go to state 35
    IF              shift and go to state 36

    bloc                           shift and go to state 25
    statement                      shift and go to state 26
    expression                     shift and go to state 27
    assign                         shift and go to state 28
    ifstatement                    shift and go to state 30

state 19

    (16) function -> PROC VAR LPAREN param RPAREN . OPENBRACE bloc CLOSEBRACE

    OPENBRACE       shift and go to state 37


state 20

    (17) function -> PROC VAR LPAREN RPAREN OPENBRACE . bloc CLOSEBRACE
    (18) bloc -> . statement bloc
    (19) bloc -> . statement
    (20) statement -> . expression DELIM
    (21) statement -> . assign DELIM
    (22) statement -> . STOP DELIM
    (23) statement -> . ifstatement
    (27) statement -> . WHILE LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE
    (28) statement -> . FOR LPAREN assign DELIM expression DELIM bloc RPAREN OPENBRACE bloc CLOSEBRACE
    (29) expression -> . PRINT LPAREN expression RPAREN
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression COMPARE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . VAR INC
    (38) expression -> . VAR DEC
    (39) expression -> . VAR ASSPLUS expression
    (40) expression -> . VAR ASSMINUS expression
    (41) expression -> . VAR ASSTIMES expression
    (42) expression -> . VAR ASSDIV expression
    (43) expression -> . LPAREN expression RPAREN
    (44) expression -> . NUMBER
    (45) expression -> . OPENQUOTE ANY CLOSEQUOTE
    (46) expression -> . VAR
    (47) expression -> . VAR LPAREN callparam RPAREN
    (48) expression -> . VAR LPAREN RPAREN
    (49) assign -> . VAR AFFECT expression
    (50) assign -> . VAR AFFECT array
    (51) assign -> . VAR LBRACKET expression RBRACKET AFFECT expression
    (24) ifstatement -> . IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE
    (25) ifstatement -> . IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE ELSE OPENBRACE bloc CLOSEBRACE
    (26) ifstatement -> . IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE ELSE ifstatement

    STOP            shift and go to state 29
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    PRINT           shift and go to state 33
    VAR             shift and go to state 23
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 34
    OPENQUOTE       shift and go to state 35
    IF              shift and go to state 36

    bloc                           shift and go to state 38
    statement                      shift and go to state 26
    expression                     shift and go to state 27
    assign                         shift and go to state 28
    ifstatement                    shift and go to state 30

state 21

    (4) param -> VAR DELIMPARAM param .

    RPAREN          reduce using rule 4 (param -> VAR DELIMPARAM param .)


state 22

    (14) function -> FUN VAR LPAREN param RPAREN OPENBRACE . bloc CLOSEBRACE
    (18) bloc -> . statement bloc
    (19) bloc -> . statement
    (20) statement -> . expression DELIM
    (21) statement -> . assign DELIM
    (22) statement -> . STOP DELIM
    (23) statement -> . ifstatement
    (27) statement -> . WHILE LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE
    (28) statement -> . FOR LPAREN assign DELIM expression DELIM bloc RPAREN OPENBRACE bloc CLOSEBRACE
    (29) expression -> . PRINT LPAREN expression RPAREN
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression COMPARE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . VAR INC
    (38) expression -> . VAR DEC
    (39) expression -> . VAR ASSPLUS expression
    (40) expression -> . VAR ASSMINUS expression
    (41) expression -> . VAR ASSTIMES expression
    (42) expression -> . VAR ASSDIV expression
    (43) expression -> . LPAREN expression RPAREN
    (44) expression -> . NUMBER
    (45) expression -> . OPENQUOTE ANY CLOSEQUOTE
    (46) expression -> . VAR
    (47) expression -> . VAR LPAREN callparam RPAREN
    (48) expression -> . VAR LPAREN RPAREN
    (49) assign -> . VAR AFFECT expression
    (50) assign -> . VAR AFFECT array
    (51) assign -> . VAR LBRACKET expression RBRACKET AFFECT expression
    (24) ifstatement -> . IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE
    (25) ifstatement -> . IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE ELSE OPENBRACE bloc CLOSEBRACE
    (26) ifstatement -> . IF LPAREN expression RPAREN OPENBRACE bloc CLOSEBRACE ELSE ifstatement

    STOP            shift and go to state 29
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    PRINT           shift and go to state 33
    VAR             shift and go to state 23
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 34
    OPENQUOTE       shift and go to state 35
    IF              shift and go to state 36

    bloc                           shift and go to state 39
    statement                      shift and go to state 26
    expression                     shift and go to state 27
    assign                         shift and go to state 28
    ifstatement                    shift and go to state 30

state 23

    (37) expression -> VAR . INC
    (38) expression -> VAR . DEC
    (39) expression -> VAR . ASSPLUS expression
    (40) expression -> VAR . ASSMINUS expression
    (41) expression -> VAR . ASSTIMES expression
    (42) expression -> VAR . ASSDIV expression
    (46) expression -> VAR .
    (47) expression -> VAR . LPAREN callparam RPAREN
    (48) expression -> VAR . LPAREN RPAREN
    (49) assign -> VAR . AFFECT expression
    (50) assign -> VAR . AFFECT array
    (51) assign -> VAR . LBRACKET expression RBRACKET AFFECT expression

    INC             shift and go to state 40
    DEC             shift and go to state 41
    ASSPLUS         shift and go to state 42
    ASSMINUS        shift and go to state 43
    ASSTIMES        shift and go to state 44
    ASSDIV          shift and go to state 45
    DELIM           reduce using rule 46 (expression -> VAR .)
    AND             reduce using rule 46 (expression -> VAR .)
    OR              reduce using rule 46 (expression -> VAR .)
    COMPARE         reduce using rule 46 (expression -> VAR .)
    PLUS            reduce using rule 46 (expression -> VAR .)
    MINUS           reduce using rule 46 (expression -> VAR .)
    TIMES           reduce using rule 46 (expression -> VAR .)
    DIVIDE          reduce using rule 46 (expression -> VAR .)
    LPAREN          shift and go to state 46
    AFFECT          shift and go to state 47
    LBRACKET        shift and go to state 48


state 24

    (43) expression -> LPAREN . expression RPAREN
    (29) expression -> . PRINT LPAREN expression RPAREN
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression COMPARE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . VAR INC
    (38) expression -> . VAR DEC
    (39) expression -> . VAR ASSPLUS expression
    (40) expression -> . VAR ASSMINUS expression
    (41) expression -> . VAR ASSTIMES expression
    (42) expression -> . VAR ASSDIV expression
    (43) expression -> . LPAREN expression RPAREN
    (44) expression -> . NUMBER
    (45) expression -> . OPENQUOTE ANY CLOSEQUOTE
    (46) expression -> . VAR
    (47) expression -> . VAR LPAREN callparam RPAREN
    (48) expression -> . VAR LPAREN RPAREN
